# ChipsRLBotInterface

./: CMakeLists.txt  README.md  build.sh  build_win.sh  setup.sh
assets/: assets.rc
inc/simulation/: game.h
python/rlutilities/: setup.py
python/rlutilities/rlutilities/: __init__.py
src/: python_extensions.cc
src/simulation/: ball.cc  field.cc  game.cc
